--- a/champion/templates/news_base.html
+++ b/champion/templates/news_base.html
@@ -35,21 +35,20 @@
         <!-- Navigation Links -->
         <ul id="nav-links">
             <li><a href="{% url 'home' %}">HOME</a></li>
-            <li><a href="{% url 'blog_list' %}">NEWS</a></li>
-            
+            <li><a href="{% url 'news_feed' %}">NEWS</a></li>
           
     
             <!-- Dropdown tab for Resources -->
             <li class="dropdown">
                 <a href="#">RESOURCES</a>
                 <ul class="dropdown-content">
+                    <li class="dropdown-link"><a href="{% url 'blog_list' %}">BLOGS</a></li>
                     <li class="dropdown-link"><a href="{% url 'reel_grid' %}">SHORTS</a></li>
-                    <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>
-                    <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
                     <li class="dropdown-link"><a href="{% url 'events' %}">EVENTS</a></li>
+                    <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
+                    <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>  
                 </ul>
             </li>
-
 
 
             
@@ -174,7 +173,7 @@
                      </div>
                     
                     
-                    <div class="footer-section">
+                     <div class="footer-section">
                         <h4 class="footer-title">Quick Links</h4>
                         <a href="{% url 'support_request' %}" class="footer-link">Support</a>
                         <a href="{% url 'privacy_policy' %}" class="footer-link">Privacy Policy</a>
@@ -186,10 +185,11 @@
     
                     <div class="footer-section">
                         <h4 class="footer-title">Company</h4>
-                        <a href="/about-us" class="footer-link">Become a Partner</a>
+                        <a href="{% url 'register_partner' %}" class="footer-link">Become a Partner</a>
                         <a href="{% url 'careers' %}" class="footer-link">Careers</a>
                         
                     </div>
+    
     
                     <div class="footer-section">
                         <h4 class="footer-title">STAY CONNECTED</h4>
