--- a/champion/templates/register_partner.html
+++ b/champion/templates/register_partner.html
@@ -1141,7 +1141,7 @@
                      </div>
                     
                     
-                    <div class="footer-section">
+                     <div class="footer-section">
                         <h4 class="footer-title">Quick Links</h4>
                         <a href="{% url 'support_request' %}" class="footer-link">Support</a>
                         <a href="{% url 'privacy_policy' %}" class="footer-link">Privacy Policy</a>
@@ -1153,10 +1153,11 @@
     
                     <div class="footer-section">
                         <h4 class="footer-title">Company</h4>
-                        <a href="/about-us" class="footer-link">Become a Partner</a>
+                        <a href="{% url 'register_partner' %}" class="footer-link">Become a Partner</a>
                         <a href="{% url 'careers' %}" class="footer-link">Careers</a>
                         
                     </div>
+    
     
                     <div class="footer-section">
                         <h4 class="footer-title">STAY CONNECTED</h4>
