--- a/champion/templates/reel_grid.html
+++ b/champion/templates/reel_grid.html
@@ -39,18 +39,18 @@
             <!-- Navigation Links -->
             <ul id="nav-links">
                 <li><a href="{% url 'home' %}">HOME</a></li>
-                <li><a href="{% url 'blog_list' %}">NEWS</a></li>
-                
-              
-        
+                <li><a href="{% url 'news_feed' %}">NEWS</a></li>
+          
+    
                 <!-- Dropdown tab for Resources -->
                 <li class="dropdown">
                     <a href="#">RESOURCES</a>
                     <ul class="dropdown-content">
+                        <li class="dropdown-link"><a href="{% url 'blog_list' %}">BLOGS</a></li>
                         <li class="dropdown-link"><a href="{% url 'reel_grid' %}">SHORTS</a></li>
-                        <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>
-                        <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
                         <li class="dropdown-link"><a href="{% url 'events' %}">EVENTS</a></li>
+                        <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
+                        <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>  
                     </ul>
                 </li>
     
@@ -819,7 +819,7 @@ video {
                  </div>
                 
                 
-                <div class="footer-section">
+                 <div class="footer-section">
                     <h4 class="footer-title">Quick Links</h4>
                     <a href="{% url 'support_request' %}" class="footer-link">Support</a>
                     <a href="{% url 'privacy_policy' %}" class="footer-link">Privacy Policy</a>
@@ -831,10 +831,11 @@ video {
 
                 <div class="footer-section">
                     <h4 class="footer-title">Company</h4>
-                    <a href="/about-us" class="footer-link">Become a Partner</a>
+                    <a href="{% url 'register_partner' %}" class="footer-link">Become a Partner</a>
                     <a href="{% url 'careers' %}" class="footer-link">Careers</a>
                     
                 </div>
+
 
                 <div class="footer-section">
                     <h4 class="footer-title">STAY CONNECTED</h4>
